buildSearchableOptions is useless for this plugin, disable it