@@ -52,8 +52,7 @@ runIde {
 }
 
 buildSearchableOptions {
-    enabled true
-    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
+    enabled false
 }
 
 repositories {
